# rcoa

./: LICENSE  PEER_REVIEW.md  RCOA_Revised_Paper.md  README.md  benchmark-headless.js  demo-denoiser-headless.js  demo-fleet-headless.js  deploy.sh  fleet-maintenance-simulator.html  index.html  neural-pruning-demo.html  pattern-recognition-denoiser.html  pyproject.toml  server-cluster-demo.html  verify-metrics.js
.github/workflows/: deploy-pages.yml
experiments/: __init__.py  run_cec2017.py  run_smp.py
paper/: rcoa_paper.aux  rcoa_paper.bbl  rcoa_paper.blg  rcoa_paper.out  rcoa_paper.tex  references.bib
results/: cec2017_results.csv  cec2017_summary.json
src/rcoa/: __init__.py  agents.py  cli.py  core.py  experiment.py  operators.py  stats.py
src/rcoa/benchmarks/: __init__.py  cec2017.py  feature_selection.py  neural_pruning.py  smp.py
src/rcoa/comparisons/: __init__.py  de.py  ga.py  pso.py
src/rcoa/tuning/: __init__.py  sensitivity.py
